--- a/client/src/index.css
+++ b/client/src/index.css
@@ -207,7 +207,7 @@ div[data-post-id] .video-container {
   body {
     @apply font-sans antialiased bg-gray-100 text-foreground;
     width: 100%;
-    min-height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
     overflow-y: auto;
@@ -220,6 +220,11 @@ div[data-post-id] .video-container {
     -webkit-user-select: none;
     user-select: none;
     scrollbar-width: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
 
   body::-webkit-scrollbar {
